[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/level3/tileset/craftpix-net-965049-free-industrial-zone-tileset-pixel-art/4 Animated objects/Entry.png" type="Texture" id=1]
[ext_resource path="res://objects/door.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 224, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "closed",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": false,
"name": "closing",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": false,
"name": "opened",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": false,
"name": "opening",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 15, 31.5 )

[sub_resource type="RectangleShape2D" id=15]
extents = Vector2( 60.5, 10 )

[node name="door" type="StaticBody2D"]
scale = Vector2( 1.44, 1.44 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
animation = "closed"

[node name="doorCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.5 )
shape = SubResource( 14 )

[node name="detector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="detector"]
position = Vector2( -26.5, 22 )
shape = SubResource( 15 )

[connection signal="body_entered" from="detector" to="." method="_on_detector_body_entered"]
[connection signal="body_exited" from="detector" to="." method="_on_detector_body_exited"]
